--- a/views/admin/partials/leftside.ejs
+++ b/views/admin/partials/leftside.ejs
@@ -5,7 +5,7 @@
                 <img src="/admin/images/logo.svg" alt="Rocketman - Admin Dashboard Template">
             </div>
             <div class="ml-3 font-medium text-white transition-opacity group-[.side-menu--collapsed.side-menu--on-hover]:xl:opacity-100 group-[.side-menu--collapsed]:xl:opacity-0">
-                LUCENT
+                Crazebikes Management
             </div>
         </a>
         <a class="toggle-compact-menu ml-auto hidden h-[20px] w-[20px] items-center justify-center rounded-full border border-white/40 text-white transition-[opacity,transform] hover:bg-white/5 group-[.side-menu--collapsed]:xl:rotate-180 group-[.side-menu--collapsed.side-menu--on-hover]:xl:opacity-100 group-[.side-menu--collapsed]:xl:opacity-0 3xl:flex" href="#">
@@ -25,25 +25,44 @@
                     <i data-tw-merge="" data-lucide="chevron-down" class="stroke-[1] w-5 h-5 side-menu__link__chevron"></i>
                 </a>
                 <!-- BEGIN: Second Child -->
-                <ul class="hidden">
+                <ul  class="block">
                     <li>
                         <a href="/admin/oveview/1" class="side-menu__link ">
                             <div class="side-menu__link__title">
-                                Overview 1
+                                Overview
                             </div>
                         </a>
                         <!-- BEGIN: Third Child -->
                         <!-- END: Third Child -->
                     </li>
                     <li>
-                        <a href="lucent-dashboard-overview-2.html" class="side-menu__link ">
+                        <a href="/admin/cohortanalysis" class="side-menu__link ">
                             <div class="side-menu__link__title">
-                                Overview 2
+                               Cohort Analysis
                             </div>
                         </a>
                         <!-- BEGIN: Third Child -->
                         <!-- END: Third Child -->
                     </li>
+                    <li>
+                        <a href="/admin/rfmanalysis" class="side-menu__link ">
+                            <div class="side-menu__link__title">
+                                RFM Analysis
+                            </div>
+                        </a>
+                        <!-- BEGIN: Third Child -->
+                        <!-- END: Third Child -->
+                    </li>
+                    <li>
+                        <a href="/admin/sales/charts" class="side-menu__link ">
+                            <div class="side-menu__link__title">
+                                Sales Dashboard
+                            </div>
+                        </a>
+                        <!-- BEGIN: Third Child -->
+                        <!-- END: Third Child -->
+                    </li>
+                  
                 </ul>
                 <!-- END: Second Child -->
             </li>
@@ -58,11 +77,7 @@
                 <!-- BEGIN: Second Child -->
                 <ul class="block">
                     <li>
-                        <a href="lucent-products.html" class="side-menu__link side-menu__link--active ">
-                            <div class="side-menu__link__title">
-                                Products
-                            </div>
-                        </a>
+                    
                         <!-- BEGIN: Third Child -->
                         <!-- END: Third Child -->
                     </li>
@@ -97,9 +112,9 @@
                 <!-- BEGIN: Second Child -->
                 <ul class="block">
                     <li>
-                        <a href="/admin/admin" class="side-menu__link side-menu__link--active ">
+                        <a href="/admin/admins" class="side-menu__link side-menu__link--active ">
                             <div class="side-menu__link__title">
-                                Admin
+                                Admins
                             </div>
                         </a>
                         <!-- BEGIN: Third Child -->
@@ -109,7 +124,7 @@
                     <li>
                         <a href="/admin/users" class="side-menu__link ">
                             <div class="side-menu__link__title">
-                                User
+                                Users
                             </div>
                         </a>
                         <!-- BEGIN: Third Child -->
@@ -128,7 +143,7 @@
                 <!-- BEGIN: Second Child -->
                 <ul class="block">
                     <li>
-                        <a href="lucent-products.html" class="side-menu__link side-menu__link--active ">
+                        <a href="/admin/productcategories" class="side-menu__link side-menu__link--active ">
                             <div class="side-menu__link__title">
                                 Product categories
                             </div>
@@ -138,7 +153,7 @@
                     </li>
                     
                     <li>
-                        <a href="/admin/orders" class="side-menu__link ">
+                        <a href="/admin/productsubcategories" class="side-menu__link ">
                             <div class="side-menu__link__title">
                                 Product subcategories
                             </div>
@@ -147,7 +162,7 @@
                         <!-- END: Third Child -->
                     </li>
                     <li>
-                        <a href="/admin/feedbacks" class="side-menu__link ">
+                        <a href="/admin/products" class="side-menu__link ">
                             <div class="side-menu__link__title">
                                 Products
                             </div>
@@ -158,26 +173,9 @@
                 </ul>
                 <!-- END: Second Child -->
             </li>
-            <li class="side-menu__divider">
-                PAGES
-            </li>
-            <li>
-                <a href="/admin/profile" class="side-menu__link ">
-                    <i data-tw-merge="" data-lucide="trello" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
-                    <div class="side-menu__link__title">Profile</div>
-                </a>
-                <!-- BEGIN: Second Child -->
-                <!-- END: Second Child -->
-            </li>
+           
         
-            <li>
-                <a href="/admin/login" class="side-menu__link ">
-                    <i data-tw-merge="" data-lucide="unlock" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
-                    <div class="side-menu__link__title">Login</div>
-                </a>
-                <!-- BEGIN: Second Child -->
-                <!-- END: Second Child -->
-            </li>
+          
         </ul>
     </div>
 </div>
