--- a/views/admin/layouts/header_footer.ejs
+++ b/views/admin/layouts/header_footer.ejs
@@ -9,7 +9,7 @@
         <meta name="description" content="Rocketman admin is super flexible, powerful, clean & modern responsive tailwind admin template with unlimited possibilities.">
         <meta name="keywords" content="admin template, Rocketman Admin Template, dashboard template, flat admin template, responsive admin template, web app">
         <meta name="author" content="LEFT4CODE">
-        <title>Products - Rocketman - Admin Dashboard Template</title>
+        <title>Crazebikes</title>
         <!-- BEGIN: CSS Assets-->
 
         <link rel="stylesheet" href="/admin/css/vendors/litepicker.css">
