--- a/views/admin/order_detail.ejs
+++ b/views/admin/order_detail.ejs
@@ -9,7 +9,7 @@
                 <div class="content relative transition-[margin,width] duration-100 w-full after:absolute after:inset-0 after:bg-slate-100 after:content-[''] after:xl:rounded-xl after:z-10 content--compact xl:ml-[275px] [&.content--compact]:xl:ml-[91px]">
                     <div class="scrollable-ref z-20 h-full w-full overflow-y-auto px-5 pb-5 pt-[90px] [&_.simplebar-content]:p-0 [&_.simplebar-track.simplebar-vertical]:w-[10px] [&_.simplebar-track.simplebar-vertical]:mr-0.5 [&_.simplebar-track.simplebar-vertical_.simplebar-scrollbar]:before:bg-slate-600/30">
 
-                                <p style="font-size: 50px;">                                       <a type="button" class="btn btn-primary active" data-bs-toggle="button" aria-pressed="true" href="/admin/feedbacks">Back </a>
+                                <p style="font-size: 50px;">                                       <a type="button" class="btn btn-primary active" data-bs-toggle="button" aria-pressed="true" href="/admin/orders">Back </a>
                                   ID: <%=id%>   
                                   <div class="col-md-3">
                                     <form >
